Use a single SocketHttpClient. (#4794)
* Use a single SocketHttpClient.
* Refactor all usages in reactive and Níma.
* Fix intermittent test failure.