@@ -16,48 +16,48 @@
 
 package io.helidon.reactive.webserver;
 
-import java.util.Arrays;
+import java.time.Duration;
+import java.time.temporal.ChronoUnit;
 import java.util.List;
-import java.util.Map;
-import java.util.concurrent.TimeUnit;
 import java.util.logging.Logger;
 
+import io.helidon.common.http.HeadersClientResponse;
 import io.helidon.common.http.Http;
+import io.helidon.common.testing.http.junit5.SocketHttpClient;
 import io.helidon.reactive.webclient.WebClient;
 import io.helidon.reactive.webclient.WebClientRequestBuilder;
 import io.helidon.reactive.webclient.WebClientResponse;
-import io.helidon.reactive.webserver.utils.SocketHttpClient;
 
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 
+import static io.helidon.common.testing.http.junit5.HttpHeaderMatcher.hasHeader;
 import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.collection.IsMapContaining.hasEntry;
 
 /**
  * Tests support for compression in the webserver.
  */
 @Deprecated(since = "3.0.0", forRemoval = true)
-public class CompressionV2ApiTest {
+class CompressionV2ApiTest {
     private static final Logger LOGGER = Logger.getLogger(CompressionV2ApiTest.class.getName());
+    private static final Duration TIME_OUT = Duration.of(10, ChronoUnit.SECONDS);
 
     private static WebServer webServer;
 
     private static WebClient webClient;
 
     @BeforeAll
-    public static void startServer() throws Exception {
+    static void startServer() throws Exception {
         startServer(0);
     }
 
     @AfterAll
-    public static void close() throws Exception {
+    static void close() throws Exception {
         if (webServer != null) {
             webServer.shutdown()
-                    .toCompletableFuture()
-                    .get(10, TimeUnit.SECONDS);
+                    .await(TIME_OUT);
         }
     }
 
@@ -66,9 +66,8 @@ public class CompressionV2ApiTest {
      *
      * @param port the port on which to start the server; if less than 1,
      * the port is dynamically selected
-     * @throws Exception in case of an error
      */
-    private static void startServer(int port) throws Exception {
+    private static void startServer(int port) {
         webServer = WebServer.builder()
                 .host("localhost")
                 .port(port)
@@ -81,8 +80,7 @@ public class CompressionV2ApiTest {
                 .enableCompression(true)        // compression
                 .build()
                 .start()
-                .toCompletableFuture()
-                .get(10, TimeUnit.SECONDS);
+                .await(TIME_OUT);
 
         webClient = WebClient.builder()
                 .baseUri("http://localhost:" + webServer.port())
@@ -101,12 +99,16 @@ public class CompressionV2ApiTest {
      * @throws Exception if error occurs.
      */
     @Test
-    public void testGzipHeader() throws Exception {
-        List<String> requestHeaders = Arrays.asList("Accept-Encoding: gzip");
-        String s = SocketHttpClient.sendAndReceive("/compressed", Http.Method.GET, null,
-                                                   requestHeaders, webServer);
-        Map<String, String> responseHeaders = TransferEncodingTest.cutHeaders(s);
-        assertThat(responseHeaders, hasEntry("content-encoding", "gzip"));
+    void testGzipHeader() throws Exception {
+        List<String> requestHeaders = List.of("Accept-Encoding: gzip");
+        try (SocketHttpClient c = SocketHttpClient.create(webServer.port())) {
+            String s = c.sendAndReceive("/compressed",
+                                        Http.Method.GET, null,
+                                        requestHeaders);
+
+            HeadersClientResponse responseHeaders = SocketHttpClient.headersFromResponse(s);
+            assertThat(responseHeaders, hasHeader(Http.HeaderValue.create(Http.Header.CONTENT_ENCODING, "gzip")));
+        }
     }
 
     /**
@@ -117,12 +119,16 @@ public class CompressionV2ApiTest {
      * @throws Exception if error occurs.
      */
     @Test
-    public void testDeflateHeader() throws Exception {
-        List<String> requestHeaders = Arrays.asList("Accept-Encoding: deflate");
-        String s = SocketHttpClient.sendAndReceive("/compressed", Http.Method.GET, null,
-                requestHeaders, webServer);
-        Map<String, String> responseHeaders = TransferEncodingTest.cutHeaders(s);
-        assertThat(responseHeaders, hasEntry("content-encoding", "deflate"));
+    void testDeflateHeader() throws Exception {
+        List<String> requestHeaders = List.of("Accept-Encoding: deflate");
+        try (SocketHttpClient c = SocketHttpClient.create(webServer.port())) {
+            String s = c.sendAndReceive("/compressed",
+                                        Http.Method.GET, null,
+                                        requestHeaders);
+
+            HeadersClientResponse responseHeaders = SocketHttpClient.headersFromResponse(s);
+            assertThat(responseHeaders, hasHeader(Http.HeaderValue.create(Http.Header.CONTENT_ENCODING, "deflate")));
+        }
     }
 
     /**
@@ -131,12 +137,12 @@ public class CompressionV2ApiTest {
      * @throws Exception if error occurs.
      */
     @Test
-    public void testGzipContent() throws Exception {
+    void testGzipContent() throws Exception {
         WebClientRequestBuilder builder = webClient.get();
         builder.headers().add("Accept-Encoding", "gzip");
         WebClientResponse response = builder.path("/compressed")
                 .request()
-                .await(10, TimeUnit.SECONDS);
+                .await(TIME_OUT);
         assertThat(response.content().as(String.class).get(), equalTo("It works!"));
     }
 
@@ -146,12 +152,12 @@ public class CompressionV2ApiTest {
      * @throws Exception if error occurs.
      */
     @Test
-    public void testDeflateContent() throws Exception {
+    void testDeflateContent() throws Exception {
         WebClientRequestBuilder builder = webClient.get();
         builder.headers().add("Accept-Encoding", "deflate");
         WebClientResponse response = builder.path("/compressed")
                 .request()
-                .await(10, TimeUnit.SECONDS);
+                .await(TIME_OUT);
         assertThat(response.content().as(String.class).get(), equalTo("It works!"));
     }
 }
